[package]
name = "crate_creation_to_export_and_beyond"
version = "0.1.0"
authors = ["Logickin"]
edition = "2021"
license = "MIT"
description = "Learn to build a crate for other projects"

# [lib]
# name = "crate_creation_to_export_and_beyond"           # The name of the target.
# path = "src/lib.rs"    # The source file of the target.
# test = true            # Is tested by default.
# doctest = true         # Documentation examples are tested by default.
# bench = true           # Is benchmarked by default.
# doc = true             # Is documented by default.
# plugin = false         # Used as a compiler plugin (deprecated).
# proc-macro = false     # Set to `true` for a proc-macro library.
# harness = true         # Use libtest harness.
# edition = "2021"       # The edition of the target.
# crate-type = ["lib"]   # The crate types to generate.
# required-features = [] # Features required to build this target (N/A for lib).

[dependencies]
# You can ommit the following number to tell the complier to ignore any minor and use the latest major verson
# e.g: clap = "4"      # 4.0.32
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3